# scout-off-backend

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  BACKEND_API_DOCS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-staging.yml
__mocks__/: better-sqlite3.js
contracts/: Cargo.toml  INVARIANT_TESTS.md
contracts/connection/: Cargo.toml
contracts/progress/: Cargo.toml
contracts/progress/src/: lib.rs
contracts/register/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/subscription/: Cargo.toml
contracts/subscription/src/: lib.rs
coverage/: lcov.info
coverage/lcov-report/: index.html
db/: 001_initial.sql  009_saved_searches.sql  010_admin_indexes.sql  010_feature_flags.sql  011_pending_admin_actions.sql  011_player_deactivation.sql  012_audit_log_hash_chain.sql  012_webhook_subscriptions.sql  013_webhook_dead_letters.sql
docs/: performance.md  secrets-rotation.md  tier-promotion.md  webhooks.md
scripts/: backup-db.sh  loadtest.ts  sqlite-cli.sh  validate-env.js  verify-backup.sh
src/: app.ts  config.ts  index.ts  version.ts
src/controllers/: adminController.ts  apiKeyController.ts  authController.ts  exportController.ts  featureFlagsController.ts  playerController.ts  scoutController.ts  scoutRecommendationsController.ts  scoutSavedSearchesController.ts  validatorController.ts  webhookAdminController.ts
src/db/: index.ts
tests/: config.test.ts  setup-shell.ts  validate-env.test.ts
(+175 files in other folders)
